# python-harness

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-01-harness-refine.md
python_harness/: __init__.py  cli.py  cli_hard_details.py  cli_hard_render.py  cli_hard_text.py  cli_soft_render.py  cli_soft_text.py  evaluator.py  hard_evaluator.py  llm_client.py  python_file_inventory.py  qc_evaluator.py  refine_apply.py  refine_apply_messages.py  refine_apply_prompt_text.py  refine_apply_support.py  refine_apply_updates.py  refine_artifacts.py  refine_checks.py  refine_engine.py  refine_execution.py  refine_execution_support.py  refine_feedback.py  refine_feedback_extractors.py  refine_feedback_formatting.py  refine_feedback_parsing.py  refine_feedback_patterns.py  refine_feedback_utils.py  refine_models.py  refine_round_evaluation.py  refine_round_flow.py  refine_round_formatting.py  refine_round_loop.py  refine_round_paths.py  refine_round_reporting.py  refine_round_resolution.py  refine_round_support.py  refine_rounds.py  refine_scoring.py  refine_workspace.py  (+10 more)
python_harness/hard_eval_helpers/: __init__.py  evaluation.py  radon.py  tools.py
tests/: test_cli.py  test_evaluator.py  test_hard_evaluator.py  test_hard_evaluator_helpers.py  test_qc_evaluator.py  test_refine_apply.py  test_refine_engine.py  test_refine_execution_support.py  test_refine_feedback.py  test_refine_round_modules.py  test_refine_scoring.py  test_refine_workspace.py  test_soft_eval_helpers.py  test_soft_evaluator.py
(+1 files in other folders)
